fix(instance): adjust some style to work on safari / firefox

--- a/src/components/InstanceItem/InstanceContent/InstanceContent.scss
+++ b/src/components/InstanceItem/InstanceContent/InstanceContent.scss
@@ -1,5 +1,8 @@
+.root {
+  flex: 1;
+  white-space: pre-line;
+}
+
 .comment {
   margin-top: 0;
-  min-height: 60px;
-  white-space: pre-line;
 }
